--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -109,7 +109,7 @@
 					<div class="col-xs-4 col-sm-2 col-sm-offset-3">
 						<h5>Developers</h5>
 						<ul class="list-unstyled">
-							<li><a href="developers.html">Overview</a></li>
+							<li><a href="./develop.html">Overview</a></li>
 							<li><a href="http://developers.anyfetch.com/" target="_blank">Docs</a></li>
 							<li><a href="http://developers.anyfetch.com/endpoints/" target="_blank">Endpoints</a></li>
 							<li><a href="http://developers.anyfetch.com/guides/" target="_blank">Guides</a></li>
@@ -119,9 +119,9 @@
 						<h5>Solution</h5>
 						<ul class="list-unstyled">
 							<li><a href="/">AnyFetch</a></li>
-							<li><a href="/use-cases.html">Use Cases</a></li>
-							<li><a href="/how-it-works.html">How it works</a></li>
-							<li><a href="/enterprise.html">Enterprise</a></li>
+							<li><a href="./use.html">Use</a></li>
+							<li><a href="./integrate.html">Integrate</a></li>
+							<li><a href="./develop.html">Develop</a></li>
 						</ul>
 					</div>
 					<div class="col-xs-4col-sm-2">
