--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -9,8 +9,8 @@
 
 	<title>{{ page.title }}</title>
 
-	<link rel="stylesheet" href="styles/bootstrap.min.css">
-	<link rel="stylesheet" href="styles/style.css">
+	<link rel="stylesheet" href="/styles/bootstrap.min.css">
+	<link rel="stylesheet" href="/styles/style.css">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800" rel="stylesheet" type="text/css">
   	<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
@@ -49,36 +49,36 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="./"><img src="images/anyfetch_icon.svg" alt="AnyFetch Icon" /> Any<b>Fetch</b></a>
+				<a class="navbar-brand" href="./"><img src="/images/anyfetch_icon.svg" alt="AnyFetch Icon" /> Any<b>Fetch</b></a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
 					{% if page.path == "index.html" %}
-					<li class="active"><a href="./" class="navbar-title">Home</a></li>
+					<li class="active"><a href="/" class="navbar-title">Home</a></li>
 					{% else %}
 					<li><a href="./" class="navbar-title">Home</a></li>
 					{% endif %}
 					{% if page.path == "use.html" %}
-					<li class="hidden-sm active"><a href="./use.html" class="navbar-title">Use</a></li>
+					<li class="hidden-sm active"><a href="/use.html" class="navbar-title">Use</a></li>
 					{% else %}
-					<li class="hidden-sm"><a href="./use.html" class="navbar-title">Use</a></li>
+					<li class="hidden-sm"><a href="/use.html" class="navbar-title">Use</a></li>
 					{% endif %}
 					{% if page.path == "integrate.html" %}
-					<li class="hidden-sm active"><a href="./integrate.html" class="navbar-title">Integrate</a></li>
+					<li class="hidden-sm active"><a href="/integrate.html" class="navbar-title">Integrate</a></li>
 					{% else %}
-					<li class="hidden-sm"><a href="./integrate.html" class="navbar-title">Integrate</a></li>
+					<li class="hidden-sm"><a href="/integrate.html" class="navbar-title">Integrate</a></li>
 					{% endif %}
 					{% if page.path == "develop.html" %}
-					<li class="hidden-sm active"><a href="./develop.html" class="navbar-title">Develop</a></li>
+					<li class="hidden-sm active"><a href="/develop.html" class="navbar-title">Develop</a></li>
 					{% else %}
-					<li class="hidden-sm"><a href="./develop.html" class="navbar-title">Develop</a></li>
+					<li class="hidden-sm"><a href="/develop.html" class="navbar-title">Develop</a></li>
 					{% endif %}
 					{% if page.path == "about-us.html" %}
-					<li class="hidden-sm active"><a href="./about-us.html" class="navbar-title">About us</a></li>
+					<li class="hidden-sm active"><a href="/about-us.html" class="navbar-title">About us</a></li>
 					{% else %}
-					<li class="hidden-sm"><a href="./about-us.html" class="navbar-title">About us</a></li>
+					<li class="hidden-sm"><a href="/about-us.html" class="navbar-title">About us</a></li>
 					{% endif %}
 					{% if page.path == "use.html" or page.path == "integrate.html" or page.path == "develop.html" or page.path == "about-us.html" %}
 					<li class="visible-sm dropdown active">
@@ -87,10 +87,10 @@
 					{% endif %}
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="./use.html">Use</a></li>
-							<li><a href="./integrate.html">Integrate</a></li>
-							<li><a href="./develop.html">Develop</a></li>
-							<li><a href="./about-us.html">About us</a></li>
+							<li><a href="/use.html">Use</a></li>
+							<li><a href="/integrate.html">Integrate</a></li>
+							<li><a href="/develop.html">Develop</a></li>
+							<li><a href="/about-us.html">About us</a></li>
 						</ul>
 					</li>
 					<li><a href="get-started.html" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a></li>
@@ -119,9 +119,9 @@
 						<h5>Solution</h5>
 						<ul class="list-unstyled">
 							<li><a href="/">AnyFetch</a></li>
-							<li><a href="./use.html">Use</a></li>
-							<li><a href="./integrate.html">Integrate</a></li>
-							<li><a href="./develop.html">Develop</a></li>
+							<li><a href="/use.html">Use</a></li>
+							<li><a href="/integrate.html">Integrate</a></li>
+							<li><a href="/develop.html">Develop</a></li>
 						</ul>
 					</div>
 					<div class="col-xs-4col-sm-2">
