--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -58,7 +58,7 @@
 					{% if page.path == "index.html" %}
 					<li class="active"><a href="/" class="navbar-title">Home</a></li>
 					{% else %}
-					<li><a href="./" class="navbar-title">Home</a></li>
+					<li><a href="/" class="navbar-title">Home</a></li>
 					{% endif %}
 					{% if page.path == "use.html" %}
 					<li class="hidden-sm active"><a href="/use.html" class="navbar-title">Use</a></li>
