--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -129,7 +129,7 @@
 						<ul class="list-unstyled">
 							<li><a href="/about-us.html">About Us</a></li>
 							<li><a href="/about-us.html#contact">Contact</a></li>
-							<li><a href="https://twitter.com/anyFetch" target="_blank">Twitter</a></li>
+							<li><a href="https://twitter.com/AnyFetch" target="_blank">Twitter</a></li>
 						</ul>
 					</div>
 				</div>
@@ -149,7 +149,7 @@
 		$('.carousel').carousel({
 			interval: 5000,
 			pause: "false"
-		})
+		});
 	</script>
 	</body>
 </html>
